--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export("%>%")
 export(bcrp_get)
 export(bcrp_table)
 export(clean_sf)
+export(covid_last_casos_fallecidos)
 export(dir_files)
 export(enaho_clean)
 export(get_centroid)
 export(inei_enaho)
 export(inei_endes)
+export(theme_map_classic)
+export(theme_map_sp)
 export(tidy_text)
 importFrom(magrittr,"%>%")
