--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: PeruData
 Title: Download and get data from Peru.
-Version: 1.2.0.9000
+Version: 1.2.2.0011
 Authors@R: 
     person("Jhon", "Flores", , "fr.jhonk@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Download and get data from Peru.
+Description:
+    Download and get data from Peru.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/tjhon/PeruData
+BugReports: https://github.com/tjhon/PeruData/issues
 Imports:
     purrr,
+    rlang (>= 0.1.2),
     here,
     fs,
     rvest,
@@ -24,7 +28,21 @@ Imports:
     magrittr,
     readr,
     stringi,
-    tidyselect
+    raster,
+    tidyselect,
+    vroom,
+    ggplot2,
+    tidyr,
+    lubridate,
+    pracma,
+    sf,
+    utils
+Suggests:
+    knitr,
+    rmarkdown,
+    librarian,
+    haven
+VignetteBuilder: knitr
 Depends: 
     R (>= 4.1.0)
 LazyData: true
